--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
-
+logging.level.org.hibernate.SQL=DEBUG
 
 spring.config.location=file:/directoryof file/app.properties
 spring.config.name=app
