--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/Lotto6from49springboot?serverT
 spring.datasource.username=root
 spring.datasource.password=austria2019
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
-logging.level.org.hibernate.SQL=DEBUG
-
-spring.config.location=file:/directoryof file/app.properties
-spring.config.name=app
+spring.data.rest.base-path=/api
