--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/Lotto6from49springboot?serverT
 spring.datasource.username=root
 spring.datasource.password=austria2019
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=update
 
 spring.data.rest.base-path=/api
